--- a/platform/chromium/manifest.json
+++ b/platform/chromium/manifest.json
@@ -1,5 +1,5 @@
 {
-  "author": "All uBlock Origin contributors",
+  "author": "DFO-MPO",
   "background": {
     "page": "background.html"
   },
@@ -8,7 +8,7 @@
       "16": "img/icon_16.png",
       "32": "img/icon_32.png"
     },
-    "default_title": "uBlock Origin",
+    "default_title": "uBlock Origin (DFO)",
     "default_popup": "popup.html"
   },
   "commands": {
